fixed height on small landscape's screen in hero section

--- a/style.css
+++ b/style.css
@@ -1003,7 +1003,7 @@
     }
 
     .hero {
-        height: 100dvh;
+        height: auto;
     }
 
     .hero__title {
